# smartst-lite

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: README.md  autonomous-development-plan.md  autonomous-progress.md  current-development-baseline.md  deployment-package-split.md  development-readiness.md  livekit-desktop-surgery-teaching-architecture.md  livekit-desktop-surgery-teaching-development-plan.md  livekit-native-media-worker-service-feasibility.md  next-stage-real-livekit-native-usb.md  poc-baseline-freeze.md  real-connectivity-acceptance-checklist.md  real-connectivity-lab.md  recording-manifest.md  test-plan.md  ui-visual-style.md  usb-first-rearchitecture.md  website-product-introduction.md
media-worker-poc/: README.md  device-probe-smoke.mjs  device-probe.mjs  native-readiness-smoke.mjs  native-readiness.mjs  recording-poc-smoke.mjs  recording-poc.mjs  smoke.mjs  usb4-validate-smoke.mjs  usb4-validate.mjs  worker.mjs
native-worker/: Cargo.toml  README.md  audio-call-drain.mjs  audio-loopback-probe.mjs  audio-payload-consume.mjs  audio-probe.mjs  audio-profile.mjs  audio-render-probe.mjs  audio-render-silence.mjs  audio-wav-export.mjs  av-soak.mjs  channel-binding.mjs  export-artifact-manifest.mjs  export-artifact-utils.mjs  format-preference.mjs  interaction-drain.mjs  list-devices.mjs  payload-consume.mjs  release-smoke.mjs  session-backpressure.mjs  session-plan.mjs  session-stress.mjs  session.mjs  smoke.mjs  video-loop.mjs  video-pgm-export.mjs  video-ppm-export.mjs  video-preview-drain.mjs  video-probe.mjs
native-worker/src/: main.rs
scripts/: install-livekit-dev.ps1  livekit-media-smoke.mjs  or-agent-publisher-adapter-smoke.mjs  or-connectivity-verify.mjs  run-poc-tests.mjs  service-config-preflight.mjs  start-or-connectivity-lab.ps1  stop-or-connectivity-lab.ps1  (+1 more)
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+47 files in other folders)
