[package]
name = "ust-native-worker"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
serde_json = "1"
windows = { version = "0.58", features = [
  "Win32_Devices_FunctionDiscovery",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_UI_Shell_PropertiesSystem"
] }
