[package]
name = "smartst-lite"
version = "0.1.1"
description = "SmartST Lite Windows surgery teaching client"
authors = ["SmartST Lite"]
license = "MIT"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
get_if_addrs = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
