[package]
name = "smartst-lite"
version = "0.1.4"
description = "SmartST Lite Windows surgery teaching client"
authors = ["SmartST Lite"]
license = "MIT"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
get_if_addrs = "0.5"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2", features = [] }
time = { version = "0.3", features = ["formatting"] }
tiny_http = "0.12"
