[package]
name = "ust-desktop-client"
version = "0.1.4"
description = "UST Desktop Client for Windows surgery teaching"
authors = ["UST Desktop Client"]
license = "MIT"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
